# Cicada-16

./: LICENSE.md  README.md  emulator_roadmap.md  notes.md
.gemini/: GEMINI.md
.github/workflows/: rust.yml
Assembler/: .gitignore  Cargo.toml  README.md  asset_directives.md
Assembler/src/: assembler.rs  ast.rs  errors.rs  file_reader.rs  grammar.pest  lib.rs  main.rs  parser.rs
Assembler/src/assembler/: constant_table.rs  mod.rs  section_stack.rs  symbol_table.rs
Assembler/src/assembler/encoder/: components.rs  constants.rs  mod.rs  operand_validators.rs  utility_functions.rs
Assembler/src/assembler/encoder/instruction_encoders/: arithmetic.rs  bitwise.rs  control_flow.rs  load_store.rs  misc.rs  mod.rs  stack.rs
Assembler/src/assembler/preprocessor/: mod.rs
Assembler/src/assembler/preprocessor/constant/: mod.rs  validators.rs
Assembler/src/assembler/tile_converter/: mod.rs
Assembler/src/parser/: mod.rs
Assembler/src/parser/ast_builder/: arithmetic.rs  bitwise.rs  constants.rs  control_flow.rs  directive.rs  load_store.rs  mod.rs  operand_builders.rs  stack.rs  utility_functions.rs  validators.rs
Assembler/tests/: integration_test.rs
HardwareSpec/: APU_Architecture.md  Boot_Process.md  CPU_ISA.md  CPU_Opcodes.md  Cartridge_ROM.md  DMA_Controller.md  IO_Peripherals.md  Interrupts.md  Introduction.md  Memory_Map.md  PPU_Architecture.md  Serial_Communication.md  System_Library.md  notes.md
ProgrammingDocs/: AddressingModes.md  COMPATABILITY.md  Directives.md  Examples.md  InstructionSet.md  Introduction.md  Registers.md
