[package]
name = "cicasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
image = "0.25"
pest = "2.8.1"
pest_derive = "2.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"

[dev-dependencies]
tempfile = "3"
